[tool.poetry]
name = "course-project3"
version = "0.1.0"
description = ""
authors = ["Maxim Zaitsev <eighteenkey@yandex.ru>"]
readme = "README.md"
packages = [{include = "course_project3"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
